# agent-analysis

./: README.md  pyproject.toml
analysis/: README.md  __main__.py  performance_gap.py  trajectory.py  usage.py  utility.py
analysis/features/: __init__.py  relevance.py
analysis/features/metrics/: __init__.py  code_metrics.py  dependency_metrics.py  error_metrics.py  instance_metrics.py  localization_metrics.py  metrics.py  patch_metrics.py  type_metrics.py  utility.py
analysis/models/: conversation.py  data.py  openhands.py  patch.py  swe_bench.py
analysis/utility/: __init__.py  fs_cache.py  visualization.py
notebooks/: condenser_results.ipynb  conversation_analysis.ipynb  localization_metrics.ipynb  patch_quality.ipynb  performance_gap.ipynb  sysbox-diff.ipynb
scripts/: leaderboard_to_zeno.py
tests/: test_fs_cache.py
tests/patch/: test_apply_file_patch.py  test_diff_parsing.py  test_get_locations.py  utility.py
