[project]
name = "analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Calvin Smith",email = "calvin@all-hands.dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "datasets (>=3.3.2,<4.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "zeno-client (>=0.1.16,<0.2.0)",
    "click (>=8.1.8,<9.0.0)",
    "unidiff (>=0.7.5,<0.8.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "scikit-posthocs (>=0.11.2,<0.12.0)",
]
packages = [{include = "analysis"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
